--- a/assets/style.css
+++ b/assets/style.css
@@ -93,8 +93,8 @@ a {
   color: #fafafa;
   justify-content: center;
   text-align: center;
-  line-height: 75px;
-  font-size: 20px;
+  line-height: 230%;
+  font-size: 150%;
 }
 
 
@@ -377,18 +377,36 @@ h4{
 /*------------------media queries---*/
 /*mobile small 320px*/
 
-@media screen  and (min-width: 320px) {
+@media screen  and (max-width: 320px) {
 
   header{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 10%;    
+    width: 65%;    
   }
 
   #menu{
     line-height: 150%;
   }
+
+  h2{
+    font-size: 140%;
+  }
+
+  .featuredContainerOuter{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+   }
+
+   .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
+    width: 100%;
+    height: 70%;
+   }
+
+
 }
 
 
