--- a/assets/style.css
+++ b/assets/style.css
@@ -379,6 +379,8 @@ h4{
 
 @media screen  and (max-width: 320px) {
 
+  /***HOME PAGE****/
+
   header{
     display: flex;
     flex-direction: column;
@@ -387,7 +389,10 @@ h4{
   }
 
   #menu{
+    display: flex;
+    flex-direction: column-reverse;
     line-height: 150%;
+    margin-left: 30%;
   }
 
   h2{
@@ -398,8 +403,7 @@ h4{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    
-   }
+  }
 
    .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
     width: 100%;
@@ -409,7 +413,89 @@ h4{
 
 }
 
+/*mobile 375px*/
 
+@media screen  and (max-width: 374px) {
+
+
+/***HOME PAGE****/
+  header{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 80%;    
+  }
+
+  #menu{
+    display: flex;
+    flex-direction: column-reverse;
+    line-height: 150%;
+    margin-left: 50%;
+  }
+
+  h2{
+    font-size: 140%;
+  }
+
+  .featuredContainerOuter{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+   .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
+    width: 100%;
+    height: 70%;
+    margin: 0;
+    padding: 2%;
+    margin-bottom: 2%;
+   }
+
+}
+
+/*mobile 425px*/
+@media screen  and (max-width: 425px) {
+
+  /***HOME PAGE****/
+
+ header{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 75%;    
+  }
+
+  #menu{
+    display: flex;
+    flex-direction: column-reverse;
+    line-height: 150%;
+    margin-left: 90%;
+    padding: 0;
+  }
+
+  .hero-outer{
+    width: 100%;
+  }
+
+  h2{
+    font-size: 140%;
+  }
+
+  .featuredContainerOuter{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+   .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
+    width: 100%;
+    height: 70%;
+    margin: 0;
+    padding: 2%;
+    margin-bottom: 4%;
+   }
+
+}
 
 
 
