--- a/assets/style.css
+++ b/assets/style.css
@@ -392,7 +392,9 @@ h4{
     display: flex;
     flex-direction: column-reverse;
     line-height: 150%;
-    margin-left: 30%;
+    margin-left: 60%;
+    padding: 0;
+    
   }
 
   h2{
@@ -430,7 +432,9 @@ h4{
     display: flex;
     flex-direction: column-reverse;
     line-height: 150%;
-    margin-left: 50%;
+    margin-left: 90%;
+    padding: 0;
+   
   }
 
   h2{
@@ -454,7 +458,7 @@ h4{
 }
 
 /*mobile 425px*/
-@media screen  and (max-width: 425px) {
+@media screen  and (max-width: 426px) {
 
   /***HOME PAGE****/
 
@@ -468,7 +472,7 @@ h4{
   #menu{
     display: flex;
     flex-direction: column-reverse;
-    line-height: 150%;
+    line-height: 150%;   
     margin-left: 90%;
     padding: 0;
   }
@@ -483,12 +487,12 @@ h4{
 
   .featuredContainerOuter{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
   }
 
    .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
-    width: 100%;
+    width: 90%;
     height: 70%;
     margin: 0;
     padding: 2%;
@@ -497,6 +501,59 @@ h4{
 
 }
 
+/***Tablet 768px***/
+@media screen  and (max-width: 427px) and (min-width: 768px) {
 
+  /***HOME PAGE****/
 
+ header{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 75%;    
+  }
+
+  #menu{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    line-height: 150%;
+    margin-left: 60%;
+    padding: 0;
+    
+    }
+
+  nav li {
+    padding: 5%;
+    margin: 0;
+    margin-right: 0;
+  }
+
+  .hero-outer{
+    width: 100%;
+  }
+
+  h2{
+    font-size: 140%;
+  }
+
+  .site-info{
+    font-size: 130%;
+  }
+
+  .featuredContainerOuter{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+   .featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
+    width: 93%;
+    height: 70%;
+    margin: 0;
+    padding: 2%;
+    margin-bottom: 4%;
+   }
+
+}
 
