changed images to follow the WEBP format. replaced file paths throughout site.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -78,7 +78,7 @@ a {
 .hero-image{
     height:80%;
     width: 100%;
-    background:url("../images/jpeg-png/hero-image.png") no-repeat center center;
+    background:url("../images/hero-image.webp") no-repeat center center;
     
     margin: 0;
     padding: 0;
