--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,6 +4,7 @@ body, html {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #F1F2F4;
+  overflow-x: hidden;
 }
 
 div{
