--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -224,7 +224,6 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
   color: black;
 }
@@ -235,7 +234,6 @@ p {
   position: absolute;
   width: 100%;
   height: 0;
-  -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
   transform: rotateY(180deg);
 }
@@ -307,7 +305,7 @@ h4{
  margin-left: 30%;
   width: 25%;
   color: rgba(153, 30, 2, 1);
-  transition: width 2s height 2s;
+  transition: width 2s ;
   cursor: pointer;
 }
 
@@ -372,6 +370,7 @@ h4{
 .socials {
     display: list-item;
     text-align: -webkit-match-parent;
+    text-align: -moz-match-parent;
     color: #fafafa;
 }
 
